# eks-argocd-app

./: Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
kustomize/: deployment.yaml
