[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["yu-min <misaki.yu@eneos.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
streamlit = "^1.40.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
